--- a/profile.html
+++ b/profile.html
@@ -196,10 +196,10 @@
         </div>
         <div class="nav-bar">
             <nav>
-                <div class="nav-tab"><a href="D:\wt codes\Full stack training\portfolio\portfolio.html">About me</a></div>
-                <div class="nav-tab"><a href="D:\wt codes\Full stack training\portfolio\skills.html">Skills</a></div>
-                <div class="nav-tab"><a href="D:\wt codes\Full stack training\portfolio\education.html">Education</a></div>
-                <div class="nav-tab"><a>Profile</a></div>
+                <div class="nav-tab"><a href=portfolio.html >About me</a></div>
+                <div class="nav-tab"><a href=skills.html>Skills</a></div>
+                <div class="nav-tab"><a href=education.html>Education</a></div>
+                <div class="nav-tab"><a href=profile.html>Profile</a></div>
             </nav>
         </div>   
     </head>
@@ -211,7 +211,7 @@
               Nationality : Indian<br><br>
               Languages known : Tamil,English<br><br>
               Email :  hardikrajb03@gmail.com<br><br>
-              Phone : 9894605301<br><br>
+              Phone : 9894605301<br>
             </p>
         </div>
   </body>
