--- a/skills.html
+++ b/skills.html
@@ -119,10 +119,10 @@
         </div>
         <div class="nav-bar">
             <nav>
-                <div class="nav-tab"><a href="D:\wt codes\Full stack training\portfolio\portfolio.html">About me</a></div>
-                <div class="nav-tab"><a href="D:\wt codes\Full stack training\portfolio\skills.html">Skills</a></div>
-                <div class="nav-tab"><a href="D:\wt codes\Full stack training\portfolio\education.html">Education</a></div>
-                <div class="nav-tab"><a>Profile</a></div>
+                <div class="nav-tab"><a href=portfolio.html >About me</a></div>
+                <div class="nav-tab"><a href=skills.html>Skills</a></div>
+                <div class="nav-tab"><a href=education.html>Education</a></div>
+                <div class="nav-tab"><a href=profile.html>Profile</a></div>
             </nav>
         </div>   
     </head>
