--- a/profile.html
+++ b/profile.html
@@ -196,7 +196,7 @@
         </div>
         <div class="nav-bar">
             <nav>
-                <div class="nav-tab"><a href=portfolio.html >About me</a></div>
+                <div class="nav-tab"><a href=index.html >About me</a></div>
                 <div class="nav-tab"><a href=skills.html>Skills</a></div>
                 <div class="nav-tab"><a href=education.html>Education</a></div>
                 <div class="nav-tab"><a href=profile.html>Profile</a></div>
